src/components/accordion/accordion.css
@import url("../../styles/custom-media.css");

:host,
:host * {
  box-sizing: border-box;
}

:host {
  --accordion-font-regular: var(--leu-font-family-regular);
  --accordion-font-black: var(--leu-font-family-black);

  --accordion-toggle-font: var(--accordion-font-black);

  --label-color: var(--leu-color-black-60);
  --label-color-active: var(--leu-color-black-100);

  --divider-color: var(--leu-color-black-20);
  --divider-color-active: var(--leu-color-black-100);

  --transition: 0.1s ease;

  font-family: var(--chip-font-regular);

  position: relative;
}

.heading {
  margin: 0;
}

.button {
  width: 100%;
  background: none;
  padding: 1rem 0;
  margin: none;
  cursor: pointer;

  border: none;

  color: var(--label-color);
  font-family: var(--accordion-toggle-font);
  font-size: 1rem;
  line-height: 1.5rem;
  text-align: left;

  display: flex;
  gap: 0.25rem;

  transition: color var(--transition);

  @media (--viewport-regular) {
    font-size: 1.125rem;
    gap: 0.8rem;
  }

  @media (--viewport-xlarge) {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

.button:focus-visible {
  outline: 2px solid var(--leu-color-func-cyan);
  outline-offset: 4px;
}

.button:hover,
.button:focus-visible,
:host([open]) .button {
  color: var(--label-color-active);
}

.plus {
  position: relative;
  flex: 0 0 1rem;
  aspect-ratio: 1;
  align-self: center;
  margin-inline: 0.5rem;
}

.plus::before,
.plus::after {
  content: "";

  position: absolute;
  top: calc(50% - 0.0625rem);
  left: 0;

  display: block;
  width: 1rem;
  height: 0.125rem;
  aspect-ratio: 1 / 0.125;
  background-color: currentcolor;
  transition: transform var(--transition);
}

.plus::before {
  transform: rotate(90deg);
}

:host([open]) .plus::before {
  transform: rotate(180deg);
}

.label {
  display: block;
  flex-grow: 1;
}

.contentwrapper {
  display: grid;
  grid-template-rows: 1fr;
  transition: grid-template-rows var(--transition);
}

.content {
  overflow: hidden;
}

.contentwrapper[hidden] {
  grid-template-rows: 0fr;
}

slot[name="content"] {
  display: block;
  padding: 0.5rem 0 1.5rem;

  @media (--viewport-medium) {
    padding: 0.75rem 0 1.5rem;
  }

  @media (--viewport-xlarge) {
    padding: 1rem 0 2.5rem;
  }
}

.divider {
  position: absolute;
  top: 100%;
  left: 0;

  width: 100%;
  height: 1px;
  margin: 0;

  border: none;
  background-color: var(--divider-color);

  transition: transform var(--transition), background-color var(--transition);
}

:host(:not([open])) .heading:is(:hover, :focus-visible) ~ .divider {
  background-color: var(--divider-color-active);
  transform: scaleY(3);
}

